--- a/WebVisualizations/assets/styles.css
+++ b/WebVisualizations/assets/styles.css
@@ -1,10 +1,13 @@
 /* html {
   position:relative;
-  }
-
-  body {
-    margin: 0 15px 100px 0;
-    font-family: Courier, "Helvetica Neue", sans-serif;
-    color: #fff
-
   } */
+/* 
+  body {
+    /* margin: 0 15px 100px 0; */
+    /* font-family: Arial, Helvetica, sans-serif, "Helvetica Neue", sans-serif;
+    color: #fff
+  } */ 
+
+  .container{
+    margin:150px 150px 150px 150px 
+  }
